--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -1,39 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
     />
-    <title>Hello React!</title>
+    <title>Bach CoCoCo</title>
   </head>
+
   <body>
     <div id="root"></div>
-
-    <!-- Dependencies -->
-    <% if (webpackConfig.mode == 'production') { %>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/react/16.8.6/umd/react.production.min.js"
-      integrity="sha256-3vo65ZXn5pfsCfGM5H55X+SmwJHBlyNHPwRmWAPgJnM="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.8.6/umd/react-dom.production.min.js"
-      integrity="sha256-qVsF1ftL3vUq8RFOLwPnKimXOLo72xguDliIxeffHRc="
-      crossorigin="anonymous"
-    ></script>
-    <% } else { %>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/react/16.8.6/umd/react.development.js"
-      integrity="sha256-9H05eCUa5x4G28dytYBwoAXkR3XgPE3sCogyXhrINwo="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.8.6/umd/react-dom.development.js"
-      integrity="sha256-I/ClrYyzlYEQkMUjqr7G3m/83znlycDCeI2xuBZsQx0="
-      crossorigin="anonymous"
-    ></script>
-    <% } %>
+    <script src="./index.tsx"></script>
   </body>
 </html>
