--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -13,5 +13,18 @@
 
   <body>
     <div id="root"></div>
+    <!-- Dependencies -->
+    <% if (webpackConfig.mode == 'production') { %>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/react/16.8.4/umd/react.production.min.js"
+      integrity="sha256-ctUamuIgSCQg1wsh8Iw0QbDXScmyXhjJ6lxYUscC3FA="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.8.4/umd/react-dom.production.min.js"
+      integrity="sha256-8uWWG/7CB3OS89Cw67+B++t6w0EMGfQE9C6OGps+Wd8="
+      crossorigin="anonymous"
+    ></script>
+    <% } %>
   </body>
 </html>
