--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,11 @@ body {
   cursor: pointer;
   user-select: none;
 }
+
+#frame {
+  visibility: hidden;
+}
+
+#submitbox {
+  visibility: hidden;
+}
