Add logging config to .env file

--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,10 @@ body {
   user-select: none;
 }
 
-#form-frame {
+#sheets-logging-iframe {
   visibility: hidden;
 }
 
-#submitbox {
+#sheets-logging-textarea {
   visibility: hidden;
 }
