--- a/src/index.css
+++ b/src/index.css
@@ -18,16 +18,23 @@ body {
   padding: 0;
 }
 
+body,
+html {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .mask-lane-label {
   font-family: Arial, Helvetica, sans-serif;
   cursor: pointer;
   user-select: none;
 }
 
-#sheets-logging-iframe {
-  visibility: hidden;
-}
-
-#sheets-logging-textarea {
-  visibility: hidden;
+#sheets-logging {
+  display: none;
 }
